Extend routes and database to work items
