# src/models/Database.ts
@@ -1,6 +1,7 @@
 'use strict';
 
 import * as Cloudant from '@cloudant/cloudant';
+import * as dbDebug from 'debug';
 import { templateList, templateObject, templateUpload, templateData, extendedTemplateObject, extendedTemplateList } from './Interfaces';
 import { resolve } from 'dns';
 import * as uuid from 'uuid';
@@ -17,6 +18,7 @@ export default class Database {
   credentials : CloudantCredentials;
   client: any;
   templates: any;
+  workItems: any;
 
   /**
    * Initialize the database connection
@@ -38,13 +40,23 @@ export default class Database {
     // Enable the promises plugin
     this.credentials['plugins'] = ['promises'];
     this.client = Cloudant(this.credentials);
+
+    // Create templates and workItems databases, if they do not exist
     (this.client.db.create('templates') as any).then(() => {
-      console.log('Created database');
+      dbDebug('Created database templates');
     }).catch((err) => {
-      console.log('Database already exists');
+      dbDebug('Database templates already exists');
+    });
+
+    (this.client.db.create('workitems') as any).then(() => {
+      dbDebug('Created database workitems');
+    }).catch((err) => {
+      console.log(err);
+      dbDebug('Database workitems already exists');
     });
 
     this.templates = this.client.db.use('templates');
+    this.workItems = this.client.db.use('workitems');
   }
 
   /**
@@ -84,14 +96,14 @@ export default class Database {
       this.templates.get(templateId).then((data) => {
         // Delete the template with the given id and revision
         this.templates.destroy(templateId, data.rev).then((data) => {
-          console.log(data);
+          dbDebug(data);
           resolve(true);
         }).catch((err) => {
-          console.log(err);
+          dbDebug(err);
           reject(false);
         });
       }).catch((err) => {
-        console.log(err);
+        dbDebug(err);
         reject(false);
       });
     });
@@ -107,10 +119,10 @@ export default class Database {
     return new Promise((resolve, reject) => {
       templateData['_id'] = templateId;
       this.templates.insert(templateData).then((data) => {
-        console.log(data);
+        dbDebug(data);
         resolve(true);
       }).catch((err) => {
-        console.log(err);
+        dbDebug(err);
         reject(false);
       });
     });
@@ -134,4 +146,42 @@ export default class Database {
       });
     });
   }
+
+  /**
+   * Check whether an entered template id exists
+   * @param templateId the id of a template the user chose
+   * @return Promise stating either the existence or absense
+   * of the chosen template
+   */
+  public checkTemplateId(templateId: string): Promise<boolean> {
+    return new Promise((resolve, reject) => {
+      this.templates.get(templateId).then((document) => {
+        resolve(true);
+      }).catch((err) => {
+        resolve(false);
+      });
+    });
+  }
+
+
+  /**
+   * Add a work item to the work items database
+   * @param input the data provided by the user
+   * @return Promise with either the task id or th error
+   */
+  public addWorkItem(input: templateData): Promise<string | null> {
+    const taskId: string = uuid.v4();
+    const workItem: Object = input;
+    workItem['_id'] = taskId;
+    return new Promise((resolve, reject) => {
+      this.workItems.insert(workItem).then((ret) => {
+        dbDebug(ret);
+        resolve(taskId);
+      }).catch((err) => {
+        dbDebug(err);
+        reject(err);
+      });
+    });
+  }
+
 }
